--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "HashLips minting dapp is a quick and easy way to connect your smart contract and start minting NFTs.",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.3",
+    "@react-navigation/native": "^6.0.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.68.2",
+    "react-native-web": "^0.18.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
